--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "simplechat",
   "version": "1.0.0",
   "description": "a simple chat",
-  "main": "app.js",
+  "main": "start.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
